PC-119 Left-aligned screenshot heading. Fixed header padding on xs screens. Fixed related links heading on xs screens.

--- a/less/framework/framework-info.less
+++ b/less/framework/framework-info.less
@@ -18,4 +18,18 @@
     .italic-font;
     padding: 0 @grid-gutter-width / 2;
   }
+  
+  h3:nth-child(1) {
+    .hidden-lg;
+    .hidden-md;
+    .hidden-sm;
+  
+    padding: 0;
+  }
+  
+  @media(max-width: @screen-xs-max) {
+    h1 {
+      width: 100%;
+    }
+  }
 }
