--- a/less/shared/header.less
+++ b/less/shared/header.less
@@ -41,7 +41,7 @@ header {
     .btn {
       width: 120px;
       font-size: @font-size-h6;
-    }    
+    }
   }
 }
 
@@ -56,7 +56,7 @@ header {
       padding: 0 @grid-gutter-width / 2;
     }   
     
-    .header-main {
+    .header-main .container {
       padding: 0 @grid-gutter-width / 2;
     } 
   }
